<resources>
    <string name="app_name">HeartBeat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="meet_greet_heartbeat">Meet. Greet. Heartbeat.</string>
    <string name="registrieren">registrieren</string>
    <string name="log_in">Log In</string>
    <string name="passworteingabe">Passwort:</string>
    <string name="e_mail_adresse_angeben">E-Mail Adresse angeben:</string>
    <string name="e_mail">E-Mail</string>
    <string name="passwort">Passwort</string>
    <string name="impulse">Impulse</string>
    <string name="noch_kein_konto_wechsle_zu">noch kein Konto? wechsle zu</string>
    <string name="registrieren1">Registrieren</string>

    <string-array name="sex">
        <item>Männer</item>
        <item>Frauen</item>
        <item>Divers</item>
        <item>Männer und Frauen</item>
        <item>Männer und Divers</item>
        <item>Frauen und Divers</item>
        <item>Männer, Frauen und Divers</item>

    </string-array>

    <string-array name = "age">
        <item>18 - 20</item>
        <item>21 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>40 +</item>
    </string-array>

    <string-array name = "genres">
        <item>sonstiges</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>Rap</item>
        <item>Blues</item>
        <item>Schlager</item>
        <item>Elektro</item>
        <item>Techno</item>


    </string-array>

</resources>