<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/txtMeldung2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/bearbEndBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wechselTxt" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/limelight"
        android:text="@string/meet_greet_heartbeat"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/limelight"
        android:text="@string/impulse"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/tuerkis"
        android:textSize="60sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="60pt"
        app:autoSizeMinTextSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <EditText
        android:id="@+id/loginPasswort"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_et"
        android:ems="10"
        android:hint="  Passwort"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        app:layout_constraintVertical_bias="0.0"

        />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_et"
        android:ems="10"
        android:hint="  E-Mail/Benutzername"
        android:inputType="text|textEmailAddress"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintxt" />

    <TextView
        android:id="@+id/accountname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-Mail oder Benutzername:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
        app:layout_constraintStart_toStartOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/pwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passworteingabe"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswort"
        app:layout_constraintStart_toStartOf="@+id/loginPasswort" />

    <TextView
        android:id="@+id/wechselTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/limelight"
        android:text="noch kein Konto?"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswort" />

    <TextView
        android:id="@+id/wechsellinkTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registrieren1"
        android:textColor="@color/Lila"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/wechselTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/wechselTxt"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswort" />

    <Button
        android:id="@+id/bearbEndBtn2"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:text="Weiter"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="@color/Lila"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswort" />


</androidx.constraintlayout.widget.ConstraintLayout>